--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,60 +9,781 @@
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
- 
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
- 
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
+.themeBtn_sun {
+  background-color: #f7f7de;
+  height: 3.75em;
+  width: 3.75em;
+  border-radius: 50%;
+  position: absolute;
+  left: 12.18em;
+  top: -1.87em;
+}
+.themeBtn_sun:before,
+.themeBtn_sun:after {
+  position: absolute;
+  content: "";
+  background-color: rgba(255, 235, 12, 0.3);
+
+  border-radius: 50%;
+}
+.themeBtn_sun:before {
+  height: 7.5em;
+  width: 7.5em;
+  right: -1.87em;
+  bottom: -1.87em;
+}
+.themeBtn_sun:after {
+  height: 12.5em;
+  width: 12.5em;
+  right: -4.37em;
+  bottom: -4.37em;
+}
+.themeBtn_ray1 {
+  height: 0;
+  width: 0.6em;
+  border-bottom: 10.6em solid rgba(255, 255, 255, 0.1);
+  border-left: 1.8em solid transparent;
+  border-right: 1.8em solid transparent;
+  position: absolute;
+  transform: rotate(130deg);
+  bottom: 0.6em;
+  right: 4em;
+  animation: twinkle 3s infinite ease forwards;
+}
+.themeBtn_ray2 {
+  position: absolute;
+  height: 0;
+  width: 0.9em;
+  border-bottom: 12.5em solid rgba(255, 255, 255, 0.1);
+  border-left: 2.1em solid transparent;
+  border-right: 2.1em solid transparent;
+  transform: rotate(230deg);
+  left: 3.75em;
+  bottom: -0.3em;
+  animation: twinkle 3s infinite ease forwards;
+}
+.themeBtn_ray3 {
+  position: absolute;
+  height: 0;
+  width: 0.3em;
+  border-bottom: 12.5em solid rgba(255, 255, 255, 0.1);
+  border-left: 0.9em solid transparent;
+  border-right: 0.9em solid transparent;
+  transform: rotate(80deg);
+  left: -5.3em;
+  bottom: -5.6em;
+  animation: twinkle 3s infinite ease forwards;
+}
+.themeBtn_ray4 {
+  position: absolute;
+  height: 0;
+  width: 0.1em;
+  border-bottom: 12.5em solid rgba(255, 255, 255, 0.1);
+  border-left: 0.5em solid transparent;
+  border-right: 0.5em solid transparent;
+  transform: rotate(280deg);
+  left: 7.5em;
+  bottom: -5.6em;
+  animation: twinkle 3s infinite ease forwards;
+}
+.themeBtn_moon {
+  height: 3.75em;
+  width: 3.75em;
+  box-shadow: 1.25em -1.25em 0 0 #f7f7de;
+  border-radius: 50%;
+  position: absolute;
+  left: 20%;
+  transform: translateX(-50%);
+  top: 100%;
+}
+.themeBtn_moon:before,
+.themeBtn_moon:after {
+  position: absolute;
+  content: "";
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.themeBtn_moon:before {
+  height: 6.25em;
+  width: 6.25em;
+  right: -2.5em;
+  bottom: 0;
+  animation: twinkle 3s infinite forwards;
+}
+.themeBtn_moon:after {
+  height: 11.8em;
+  width: 11.8em;
+  left: -2.8em;
+  bottom: -2.8em;
+  animation: twinkle 3.5s infinite forwards;
+}
+.themeBtn_stars {
+  position: absolute;
+  opacity: 0;
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
+    0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 0.1);
+  animation: starsfall linear infinite forwards;
+}
+
+.themeBtn_stars::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 300px;
+  height: 1px;
+  background: linear-gradient(90deg, #fff, transparent);
+}
+
+@keyframes twinkle {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 0.7;
+  }
+  55% {
+    opacity: 0.7;
+  }
+  98% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes starsfall {
+  0% {
+    transform: rotate(315deg) translateX(0);
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(315deg) translateX(-1000px);
+    opacity: 0;
+  }
+}
+
+@keyframes float {
+  50% {
+    transform: translateY(0.75em);
+  }
+}
+.themeBtn_glow:before,
+.themeBtn_glow:after {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: inherit;
+  border-radius: 50%;
+}
+.themeBtn_glow:before {
+  left: -9.3em;
+  top: -3.1em;
+}
+.themeBtn_glow:after {
+  right: -5.6em;
+  top: -0.8em;
+}
+
+/* dog */
+
+.dog {
+  position: absolute;
+  top: 100%;
+  transform: translateY(-100%);
+  right: 5%;
+  width: 20vmin;
+  height: 15vmin;
+  z-index: 0;
+}
+
+.heart {
+  position: absolute;
+  width: 6%;
+  height: 7%;
+  background-color: #e64356;
+  border-bottom-right-radius: 23%;
+  opacity: 0;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes heart-beat {
+  0% {
+    transform: scale(0.75) rotate(35deg);
+    opacity: 1;
+  }
+  5%,
+  15%,
+  25% {
+    transform: scale(1) rotate(35deg);
+  }
+  10%,
+  20% {
+    transform: scale(0.75) rotate(35deg);
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(35deg) translateY(-10px) translateX(-10px);
+    opacity: 0;
+  }
+}
+@keyframes heart-beat {
+  0% {
+    transform: scale(0.75) rotate(35deg);
+    opacity: 1;
+  }
+  5%,
+  15%,
+  25% {
+    transform: scale(1) rotate(35deg);
+  }
+  10%,
+  20% {
+    transform: scale(0.75) rotate(35deg);
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(35deg) translateY(-10px) translateX(-10px);
+    opacity: 0;
+  }
+}
+.heart--1 {
+  top: -25%;
+  left: 15%;
+  -webkit-animation: heart-beat 2s ease-out infinite 1.5s;
+  animation: heart-beat 2s ease-out infinite 1.5s;
+}
+.heart--2 {
+  top: -36%;
+  left: 7%;
+  -webkit-animation: heart-beat 2s ease-out infinite 1s;
+  animation: heart-beat 2s ease-out infinite 1s;
+}
+.heart--3 {
+  top: -48%;
+  left: 14%;
+  -webkit-animation: heart-beat 2s ease-out infinite 0.5s;
+  animation: heart-beat 2s ease-out infinite 0.5s;
+}
+.heart--4 {
+  top: -53%;
+  left: -3%;
+  -webkit-animation: heart-beat 2s ease-out infinite;
+  animation: heart-beat 2s ease-out infinite;
+}
+
+.heart:before,
+.heart:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  border-radius: 50%;
+  background-color: #e64356;
+}
+
+.heart:after {
+  bottom: 0px;
+  left: -53%;
+}
+
+.heart:before {
+  top: -53%;
+  right: 0px;
+  transform: rotate(45deg);
+}
+
+.body {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  background-color: #f79e38;
+  border-top-right-radius: 17% 40%;
+  border-top-left-radius: 25%;
+  border-bottom-right-radius: 5% 13%;
+  border-bottom-left-radius: 30% 40%;
+  z-index: 3;
+}
+
+.cheast {
+  position: absolute;
+  width: 45%;
+  height: 100%;
+  background-color: #fff;
+  border-top-right-radius: 17% 40%;
+  border-top-left-radius: 25%;
+  border-bottom-right-radius: 40% 40%;
+  border-bottom-left-radius: 40% 40%;
+  z-index: 4;
+}
+.cheast:after,
+.cheast:before {
+  position: absolute;
+  content: "";
+  width: 7%;
+  height: 55%;
+  border-radius: 39%;
+  background-color: #fff;
+}
+.cheast:after {
+  top: 36%;
+  left: 3%;
+  transform: rotate(-1deg);
+}
+.cheast:before {
+  top: 19%;
+  left: -4%;
+}
+
+.head {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+  -webkit-animation: dog-head 1s ease-out infinite;
+  animation: dog-head 1s ease-out infinite;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+@-webkit-keyframes dog-head {
+  to {
+    transform: translateX(-3px) rotate(3deg);
+  }
+}
+@keyframes dog-head {
+  to {
+    transform: translateX(-3px) rotate(3deg);
+  }
+}
+
+.tail {
+  position: absolute;
+  top: -14%;
+  left: 92%;
+  width: 10%;
+  height: 45%;
+  background-color: #f79e38;
+  border-top-right-radius: 30% 30%;
+  border-top-left-radius: 40% 30%;
+  border-bottom-right-radius: 30% 40%;
+  border-bottom-left-radius: 40% 40%;
+  z-index: 2;
+  transform: rotate(20deg);
+  -webkit-animation: dog-tail 170ms ease-out infinite;
+  animation: dog-tail 170ms ease-out infinite;
+}
+@-webkit-keyframes dog-tail {
+  from,
+  to {
+    transform: rotate(10deg);
+  }
+  50%,
+  60% {
+    transform: rotate(70deg) translateX(10px) translateY(2px);
+  }
+}
+@keyframes dog-tail {
+  from,
+  to {
+    transform: rotate(10deg);
+  }
+  50%,
+  60% {
+    transform: rotate(70deg) translateX(10px) translateY(2px);
+  }
+}
+.tail:before {
+  position: absolute;
+  content: "";
+  top: -8%;
+  left: -7%;
+  width: 100%;
+  height: 50%;
+  background-color: #f79e38;
+  border-radius: 50%;
+  -webkit-animation: dog-tail-before 160ms ease-out infinite;
+  animation: dog-tail-before 160ms ease-out infinite;
+}
+@-webkit-keyframes dog-tail-before {
+  from,
+  to {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+}
+@keyframes dog-tail-before {
+  from,
+  to {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(3px);
+  }
+}
+
+.legs {
+  position: absolute;
+  top: 97%;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  z-index: 2;
+  -webkit-animation: dog-legs 1s ease-out infinite 1.5s;
+  animation: dog-legs 1s ease-out infinite 1.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+@-webkit-keyframes dog-legs {
+  from {
+    transform: translateY(-1px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
+@keyframes dog-legs {
+  from {
+    transform: translateY(-1px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
+.legs__front,
+.legs__back {
+  width: 10%;
+  height: 100%;
+  background-color: #f79e38;
+  position: absolute;
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 100%;
+}
+.legs__front:after,
+.legs__back:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 49%;
+  background-color: #fff;
+  border-bottom-right-radius: 100%;
+  border-bottom-left-radius: 100%;
+}
+.legs__front--left {
+  left: 38%;
+  transform: rotate(1deg);
+}
+.legs__front--right {
+  left: 20%;
+  transform: rotate(-4deg);
+}
+.legs__back--left {
+  left: 69%;
+  transform: rotate(-7deg);
+}
+.legs__back--right {
+  left: 85%;
+  transform: rotate(2deg);
+}
+
+.face {
+  height: 40%;
+  width: 42%;
+  position: absolute;
+  top: -13%;
+  left: -3%;
+  background-color: #fff;
+  border-top-right-radius: 45% 50%;
+  border-top-left-radius: 35% 50%;
+  border-bottom-left-radius: 35% 21%;
+  z-index: 6;
+}
+.face:after,
+.face:before {
+  content: "";
+  position: absolute;
+  background-color: #f79e38;
+}
+.face:after {
+  width: 27%;
+  left: 7%;
+  height: 23%;
+  border-top-right-radius: 100% 100%;
+  border-bottom-left-radius: 49% 100%;
+  transform: rotate(-64deg);
+  top: -1%;
+  border-top-left-radius: 0% -20%;
+  border-bottom-right-radius: 52% 0%;
+  box-shadow: rgba(0, 0, 0, 0.1) 2px -6px 11px 1px;
+}
+.face:before {
+  width: 55%;
+  left: 42%;
+  top: 0%;
+  height: 35%;
+  border-radius: 23% 7% 16% 12%;
+  transform: rotate(0deg) scaleX(-1);
+}
+
+.eye {
+  width: 6%;
+  height: 6%;
+  position: absolute;
+  border-radius: 100%;
+  top: 24%;
+  background-color: #000;
+  z-index: 6;
+  -webkit-animation: dog-eye 1800ms infinite;
+  animation: dog-eye 1800ms infinite;
+}
+@-webkit-keyframes dog-eye {
+  from,
+  to {
+    -webkit-animation-timing-function: step-end;
+    animation-timing-function: step-end;
+    opacity: 1;
+  }
+  50%,
+  55% {
+    -webkit-animation-timing-function: step-start;
+    animation-timing-function: step-start;
+    opacity: 0;
+  }
+}
+@keyframes dog-eye {
+  from,
+  to {
+    -webkit-animation-timing-function: step-end;
+    animation-timing-function: step-end;
+    opacity: 1;
+  }
+  50%,
+  55% {
+    -webkit-animation-timing-function: step-start;
+    animation-timing-function: step-start;
+    opacity: 0;
+  }
+}
+.eye--left {
+  left: 27%;
+}
+.eye--right {
+  left: 46%;
+}
+
+.mouth {
+  background-color: transparent;
+  border-color: #000;
+  width: 44%;
+  border-style: solid;
+  border-width: 0.7vmin;
+  height: 48%;
+  z-index: 6;
+  position: absolute;
+  bottom: 35%;
+  left: 14%;
+  border-top-color: transparent;
+  border-bottom-left-radius: 72% 100%;
+  border-bottom-right-radius: 77% 100%;
+  border-right-color: transparent;
+  border-top-right-radius: 50%;
+  border-left-color: transparent;
+  transform: rotate(-41deg);
+}
+
+.year {
+  position: absolute;
+}
+.year--left {
+  top: -40%;
+  left: 3%;
+  height: 47%;
+  width: 19%;
+  z-index: 1;
+  background-color: #e99036;
+  border-top-left-radius: 68% 100%;
+  border-top-right-radius: 100% 100%;
+  transform-origin: bottom center;
+  -webkit-animation: left-year 1000ms ease-out infinite;
+  animation: left-year 1000ms ease-out infinite;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+@-webkit-keyframes left-year {
+  from {
+    transform: rotate(-26deg);
+  }
+  25% {
+    transform: rotate(-35deg);
+  }
+  50% {
+    transform: rotate(-26deg);
+  }
+  to {
+    transform: rotate(-40deg);
+  }
+}
+@keyframes left-year {
+  from {
+    transform: rotate(-26deg);
+  }
+  25% {
+    transform: rotate(-35deg);
+  }
+  50% {
+    transform: rotate(-26deg);
+  }
+  to {
+    transform: rotate(-40deg);
+  }
+}
+.year--right {
+  top: -39%;
+  left: 19%;
+  height: 38%;
+  width: 18%;
+  z-index: 1;
+  background-color: #f79e38;
+  border-top-left-radius: 56% 100%;
+  border-top-right-radius: 100% 100%;
+  transform-origin: bottom center;
+  border-bottom-right-radius: 14% 38%;
+  -webkit-animation: right-year 1000ms ease-out infinite;
+  animation: right-year 1000ms ease-out infinite;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
+}
+@-webkit-keyframes right-year {
+  from {
+    transform: rotate(-331deg);
+  }
+  25% {
+    transform: rotate(-320deg);
+  }
+  50% {
+    transform: rotate(-331deg);
+  }
+  to {
+    transform: rotate(-320deg);
+  }
+}
+@keyframes right-year {
+  from {
+    transform: rotate(-331deg);
+  }
+  25% {
+    transform: rotate(-320deg);
+  }
+  50% {
+    transform: rotate(-331deg);
+  }
+  to {
+    transform: rotate(-320deg);
+  }
+}
+
+.nose {
+  position: absolute;
+  width: 24%;
+  height: 24%;
+  background-color: #fff;
+  z-index: 7;
+  left: -12%;
+  top: -3%;
+  border-bottom-left-radius: 50% 88%;
+  border-top-left-radius: 11% 43%;
+  transform: rotate(12deg);
+}
+.nose:after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 55%;
+  background-color: #000;
+  border-radius: 100%;
+  left: -7%;
+  top: -18%;
+}
