--- a/app/globals.css
+++ b/app/globals.css
@@ -799,3 +799,39 @@
   left: -7%;
   top: -18%;
 }
+
+
+/* cloud */
+
+.cloud {
+  background: rgba(255, 255, 255);
+  width: 30px; 
+  height: 10px;
+  border-radius: 15px;	
+  box-shadow: 5px 5px rgba(0,0,0,0.2);
+  animation: twinkle  infinite forwards;
+}
+
+.cloud:after {
+  content: '';
+  background: rgba(255, 255, 255);
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  top: -5px;
+  left: 5px;
+}
+
+.cloud:before {
+  content: '';
+  background: rgba(255, 255, 255);
+  position: absolute;
+  width: 17px;
+  height: 15px;
+  border-radius: 50%;
+  top: -10px;
+  right: 5px;
+}
+
+
